--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Data.Models/BookPlatform.Data.Models.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Data.Models/BookPlatform.Data.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookPlatform.Common\BookPlatform.Common.csproj" />
+  </ItemGroup>
+
 </Project>
