--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web.ViewModels/BookPlatform.Web.ViewModels.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web.ViewModels/BookPlatform.Web.ViewModels.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookPlatform.Common\BookPlatform.Common.csproj" />
+  </ItemGroup>
+
 </Project>
