--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BookPlatform.Common\BookPlatform.Common.csproj" />
     <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
+    <ProjectReference Include="..\BookPlatform.Data\BookPlatform.Data.csproj" />
     <ProjectReference Include="..\BookPlatform.Web.ViewModels\BookPlatform.Web.ViewModels.csproj" />
   </ItemGroup>
 
