--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PlatformDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookPlatform.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
