--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Data/BookPlatform.Data.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Data/BookPlatform.Data.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\Interfaces\" />
+  </ItemGroup>
+
 </Project>
