build(services): add data processor in service layer
Added data processor sublayer for deserialization from JSON files and generation of entity instances for seeding the database.
- class Deserializer
- class Seeder
- Datasets folder for storage of JSON files
- string application constant for folder path

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Data/BookPlatform.Data.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Data/BookPlatform.Data.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DataProcessor\**" />
+    <EmbeddedResource Remove="DataProcessor\**" />
+    <None Remove="DataProcessor\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
@@ -17,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
+    <ProjectReference Include="..\BookPlatform.Services.Data\BookPlatform.Services.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
