--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Services.Data/BookPlatform.Services.Data.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Services.Data/BookPlatform.Services.Data.csproj
@@ -10,4 +10,13 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookPlatform.Common\BookPlatform.Common.csproj" />
+    <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
