build: clean up namespaces, dependencies and NuGet packages

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Data/BookPlatform.Data.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Data/BookPlatform.Data.csproj
@@ -13,11 +13,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
-    <ProjectReference Include="..\BookPlatform.Services.Data\BookPlatform.Services.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
