--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Services.Data/BookPlatform.Services.Data.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Services.Data/BookPlatform.Services.Data.csproj
@@ -14,7 +14,7 @@
     <ProjectReference Include="..\BookPlatform.Common\BookPlatform.Common.csproj" />
     <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
     <ProjectReference Include="..\BookPlatform.Data\BookPlatform.Data.csproj" />
-    <ProjectReference Include="..\BookPlatform.Web.ViewModels\BookPlatform.Web.ViewModels.csproj" />
+    <ProjectReference Include="..\BookPlatform.Web.ViewModels\BookPlatform.Core.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
