--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
@@ -33,7 +33,7 @@
     <ProjectReference Include="..\BookPlatform.Common\BookPlatform.Common.csproj" />
     <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
     <ProjectReference Include="..\BookPlatform.Data\BookPlatform.Data.csproj" />
-    <ProjectReference Include="..\BookPlatform.Services.Data\BookPlatform.Services.Data.csproj" />
+    <ProjectReference Include="..\BookPlatform.Services.Data\BookPlatform.Core.Services.csproj" />
     <ProjectReference Include="..\BookPlatform.Web.Infrastructure\BookPlatform.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\BookPlatform.Web.ViewModels\BookPlatform.Core.ViewModels.csproj" />
   </ItemGroup>
