--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Areas\Admin\Views\Shared\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
