--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
@@ -8,5 +8,28 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PlatformDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookPlatform.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Identity": {
+    "Password": {
+      "RequireDigits": true,
+      "RequireLowercase": true,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false,
+      "RequireLength": 6,
+      "RequireUniqueCharacters": 0
+    },
+    "SignIn": {
+      "RequireConfirmedAccount": false,
+      "RequireConfirmedEmail": false,
+      "RequireConfirmedPhoneNumber": false
+    },
+    "User": {
+      "RequireUniqueEmail": true
+    }
+  },
+  "Administrator": {
+    "Email": "admin@abv.bg",
+    "Username": "Admin",
+    "Password": "admin123"
   }
 }
