build: update appsettings

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
@@ -1,4 +1,9 @@
-{
+{  
+  "ConnectionStrings": {
+    "SqlServer": "Server=DESKTOP-9LL2ETD\\SQLEXPRESS;Database=BookPlatformDb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Alternative": "Server=DESKTOP-9LL2ETD\\SQLEXPRESS;Database=BookPlatformDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "PlatformDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookPlatform.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,9 +11,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PlatformDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookPlatform.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Identity": {
     "Password": {
       "RequireDigits": true,
