--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/appsettings.json
@@ -1,8 +1,7 @@
-{  
+{
   "ConnectionStrings": {
-    "SqlServer": "Server=DESKTOP-9LL2ETD\\SQLEXPRESS;Database=BookPlatformDb;Trusted_Connection=True;TrustServerCertificate=True;",
-    "Alternative": "Server=DESKTOP-9LL2ETD\\SQLEXPRESS;Database=BookPlatformDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
-    "PlatformDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookPlatform.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SqlServer": "Server=.;Database=BookPlatformDb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Alternative": "Server=.;Database=BookPlatformDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
   },
   "Logging": {
     "LogLevel": {
