--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/BookPlatform.Web.csproj
@@ -45,4 +45,11 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\css\home.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
